# anki_miner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  anki_miner.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
anki_miner/: __init__.py  __main__.py
anki_miner/cli/: __init__.py  main.py
anki_miner/cli/commands/: create_shortcut.py  mine.py  mine_folder.py
anki_miner/config/: __init__.py  config.py  defaults.py
anki_miner/exceptions/: __init__.py  anki.py  base.py  media.py  validation.py
anki_miner/gui/: __init__.py  app.py  constants.py  main_window.py
anki_miner/gui/presenters/: __init__.py  gui_presenter.py  gui_progress_callback.py  message_level.py
anki_miner/gui/resources/: __init__.py
anki_miner/gui/utils/: __init__.py  config_manager.py  recent_files.py  service_factory.py  style_utils.py
anki_miner/gui/widgets/: __init__.py  analytics_tab.py  batch_processing_tab.py  header_widget.py  log_widget.py  progress_widget.py  queue_item_widget.py  settings_tab.py  single_episode_tab.py  status_bar_widget.py  subtitle_viewer.py  update_banner.py  validation_indicator.py
anki_miner/gui/widgets/base/: sizing.py  (+4 more)
anki_miner/gui/workers/: __init__.py  base_worker.py  batch_queue_worker.py  episode_worker.py  manual_pair_worker.py  update_worker.py  validation_worker.py
anki_miner/interfaces/: __init__.py  dictionary_provider.py  presenter.py  progress.py
anki_miner/models/: __init__.py  batch_queue.py  history.py  media.py  processing.py  stats.py  word.py
anki_miner/orchestration/: __init__.py  episode_processor.py  folder_processor.py
anki_miner/presenters/: __init__.py  console_presenter.py  null_presenter.py
anki_miner/services/: __init__.py  anki_service.py  definition_service.py  export_service.py  frequency_service.py  history_service.py  known_word_db.py  media_extractor.py  pitch_accent_service.py  stats_service.py  subtitle_parser.py  update_checker.py  validation_service.py  word_filter.py  word_list_service.py
anki_miner/services/providers/: __init__.py  jisho_provider.py  jmdict_provider.py
anki_miner/utils/: __init__.py  episode_matcher.py  file_pairing.py  file_utils.py  sort_utils.py  text_utils.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  jmdict_test.xml
tests/integration/: __init__.py  test_definition_pipeline.py  test_episode_pipeline.py
tests/unit/: __init__.py  test_anki_service.py  test_batch_queue.py  test_cancel.py  test_comprehension.py  test_cross_episode.py  test_definition_service.py  test_dictionary_providers.py  test_drag_drop.py  test_episode_matcher.py  test_episode_processor.py  test_export_service.py  test_file_pairing.py  test_file_utils.py  test_folder_processor.py  test_frequency_service.py  test_history_service.py  test_known_word_db.py  test_media_extractor.py  test_models.py  test_pitch_accent_service.py  test_recent_files.py  test_sort_utils.py  test_stats_service.py  test_subtitle_parser.py  test_subtitle_viewer.py  test_text_utils.py  test_update_checker.py  test_validation_service.py  test_word_curation.py  test_word_curation_shortcuts.py  test_word_filter.py  test_word_list_service.py
(+28 files in other folders)
