[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-miner"
version = "2.0.1"
description = "Automated Japanese vocabulary mining from anime subtitles with Anki integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Anki Miner Contributors"}
]
keywords = ["anki", "japanese", "vocabulary", "anime", "subtitles", "language-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Utilities",
]

dependencies = [
    "pysubs2>=1.6.0",
    "requests>=2.28.0",
    "fugashi>=1.3.0",
    "unidic-lite>=1.0.8",
    "PyQt6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-requests>=2.28.0",
    "pre-commit>=3.0.0",
]
colorama = [
    "colorama>=0.4.6",
]

[project.scripts]
anki_miner = "anki_miner.cli.main:main"
anki_miner_gui = "anki_miner.gui.app:main"

[project.urls]
Homepage = "https://github.com/0xzerolight/anki_miner"
Documentation = "https://github.com/0xzerolight/anki_miner/blob/main/README.md"
"Bug Tracker" = "https://github.com/0xzerolight/anki_miner/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["anki_miner*"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.setuptools.package-data]
"anki_miner" = ["**/*.qss", "**/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=anki_miner --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["fugashi.*", "pysubs2.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = [
    "E501",   # Line length handled by black
    "N802",   # PyQt method overrides use camelCase (closeEvent, keyPressEvent, etc.)
    "N818",   # AnkiMinerException is the project's base exception name
    "UP035",  # Deprecated typing imports; most resolved by UP006/UP045 auto-fixes
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
